test/org/midica/testfiles/failing/chord-without-notes.midica
INCLUDE_FILE inc/instruments.midica
CHORD test